[package]
name = "Testie"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28.1"
eframe = "0.28.1"
env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }
pyo3 = { version = "0.22.1", features = ["extension-module"] }
which = "6.0.1"
widestring = "1.1.0"