[package]
name = "Testie"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28.1"
eframe = "0.28.1"
env_logger = { version = "0.11.3", default-features = false, features = [
    "auto-color",
    "humantime",
] }
wasapi = "0.15.0"
jlrs = { version = "0.21.0", features = ["local-rt", "julia-1-10"] }
expectrl = "0.7.1"
reqwest = { version = "0.12", features = ["blocking", "json", "stream", "socks"] }
tokio = { version = "1", features = ["time", "sync", "rt-multi-thread"] }
futures-util = "0.3.30"
zip = "2.1.3"